--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.441.0",
     "path": "^0.12.7",
+    "pinia": "^2.2.2",
     "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
