--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^11.0.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.3.0",
@@ -22,8 +23,10 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
+    "vite-plugin-mkcert": "^1.17.6",
     "vue": "^3.4.37",
     "vue-router": "^4.4.4",
+    "vue-sonner": "^1.1.5",
     "vue3-page-transition": "^0.1.5"
   },
   "devDependencies": {
@@ -35,7 +38,6 @@
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "vite": "^5.4.1",
-    "vite-plugin-mkcert": "^1.17.6",
     "vue-tsc": "^2.0.29"
   }
 }
