--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_SERVER_BASE="https://localhost:3000"
-VITE_APP_SERVER_API="https://localhost:3000/api/v1"
+VITE_APP_SERVER_BASE="http://localhost:3000"
+VITE_APP_SERVER_API="http://localhost:3000/api/v1/client"
