--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^11.0.3",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.3.0",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.441.0",
+    "maska": "^3.0.3",
     "path": "^0.12.7",
     "pinia": "^2.2.2",
     "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
+    "vaul-vue": "^0.2.0",
     "vite-plugin-mkcert": "^1.17.6",
     "vue": "^3.4.37",
     "vue-router": "^4.4.4",
     "vue-sonner": "^1.1.5",
+    "vue-tg": "^0.8.0",
     "vue3-page-transition": "^0.1.5"
   },
   "devDependencies": {
