--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.3.0",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.441.0",
     "maska": "^3.0.3",
     "path": "^0.12.7",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
