--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "pinia": "^2.2.2",
     "radix-vue": "^1.9.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
